crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__source__test__test_add_family_system_requirement_environment_pyproject.toml.snap
---
source: crates/pixi_manifest/src/manifests/source.rs
expression: source.to_string()
---

[project]
name = "test"
[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "1.2" }
