crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__source__test__test_remove_environment_pyproject.toml.snap
---
source: crates/pixi_manifest/src/manifests/source.rs
expression: source.to_string()
---

[project]
name = "test"
[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.environments]
bar = ["default"]
